== 0.0.6 (In Git)

=== New features
* Compatibility with cucumber 0.3.90
* Ability to specify cucumber bin with -Dcucumber.bin= or <configuration><bin> in the Maven plugin (POM).

== 0.0.5 (Never properly released)

=== Bugfixes
* Everything compiles on Java 5 (Ole Christian Rynning)

== 0.0.4 2009-06-07

This is the first release of Cuke4Duke that mostly works.

=== New features
* Spring support (Trond Marius Øvstetun)
* Maven support! (Ole Christian Rynning, Øystein Ellingbø)
* Strings are converted to int when needed (Eivind Waaler)
* Run with JUnit (Kaare Nilsen)
* Simple @Before hooks (Aslak Hellesøy)
* Use pure java step definitions (Aslak Hellesøy)