@@ -6,8 +6,11 @@ import cuke4duke.Then;
 import cuke4duke.When;
 import static org.junit.Assert.assertEquals;
 
+import java.util.List;
+import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.Map;
+import java.util.Arrays;
 
 // TODO: This is just testing a Map. We should have some own code to test!!
 public class StuffSteps {
@@ -20,9 +23,16 @@ public class StuffSteps {
 
     @When("I add a table")
     public void iAddATable(Table table) {
-        Map<String,String> hash = table.hashes().get(0);
-        assertEquals("1", hash.get("a"));
-        assertEquals("2", hash.get("b"));
+        table.diffLists(Arrays.asList(
+           Arrays.asList("a", "b"),
+           Arrays.asList("1", "2")
+        ));
+        List<Map<String, String>> hashes = new ArrayList(table.hashes());
+        Map<String, String> newRow = hashes.get(0);
+        hashes.add(newRow);
+        table.diffHashes(hashes, new HashMap(){{
+            put("surplus_row", false);
+        }});
     }
 
     @Then("I should have (\\d+) (.*) cukes")
